[gd_scene load_steps=7 format=3 uid="uid://dq2t3y7nkg5ec"]

[ext_resource type="PackedScene" uid="uid://rwqckrq2dn3t" path="res://player.tscn" id="1_tnai2"]
[ext_resource type="PackedScene" uid="uid://sx347wyopgx5" path="res://tile_map_one.tscn" id="2_oihiw"]
[ext_resource type="PackedScene" uid="uid://bod80e1u3l7x" path="res://tile_map_two.tscn" id="3_oujkx"]
[ext_resource type="Script" path="res://Levels/tiles.gd" id="4_a047j"]
[ext_resource type="PackedScene" uid="uid://c1hptlsma5ju8" path="res://key.tscn" id="4_tqw2u"]
[ext_resource type="PackedScene" uid="uid://cg5cjcvrrya1y" path="res://door.tscn" id="5_p7awd"]

[node name="LevelTesting" type="Node2D"]
y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("1_tnai2")]
position = Vector2(24, 24)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(24, 24)

[node name="Key" parent="." instance=ExtResource("4_tqw2u")]
position = Vector2(104, -40)

[node name="DoorTileMap" parent="." instance=ExtResource("5_p7awd")]
position = Vector2(24, -120)

[node name="Tiles" type="Node" parent="."]
script = ExtResource("4_a047j")

[node name="TileMapOne" parent="Tiles" instance=ExtResource("2_oihiw")]
visible = false
layer_1/tile_data = PackedInt32Array(327685, 65537, 0, 393221, 65537, 1, 458757, 65537, 2, 327686, 131073, 0, 393222, 131073, 1, 458758, 131073, 2, 327687, 196609, 0, 393223, 196609, 1, 458759, 196609, 2, 655370, 262144, 6, 720906, 262144, 7, 655371, 327680, 6, 720907, 327680, 7, 1048581, 5, 1, 1114117, 5, 1, 1048583, 65541, 0, 1114119, 5, 1, 1179655, 5, 1, 1048584, 131077, 3, 1048585, 131077, 3, 917512, 131077, 3, 917513, 131077, 3, 851973, 5, 1, 917509, 5, 1, 983045, 5, 1, 786437, 5, 1, 851975, 5, 1, 720903, 5, 1, 1048586, 131077, 3, 917515, 131077, 3, 1048587, 131077, 3, 917516, 196613, 1, 655366, 196612, 1, 655367, 196613, 0, 1179653, 5, 1, 1245189, 5, 1, 1245191, 5, 1, 1310725, 65541, 2, 1310727, 196613, 2, 1310726, 131077, 3, 917511, 65541, 2, 655365, 65541, 0, 720901, 5, 1, 786439, 5, 1, 917514, 131077, 3, 983052, 5, 1, 1048588, 196613, 2, -524288, 65541, 0, -458752, 5, 1, -393216, 5, 1, -327680, 5, 1, -262144, 5, 1, -196608, 5, 1, -131072, 5, 1, -65536, 5, 1, 0, 5, 1, 65536, 5, 1, 131072, 65541, 2, 131073, 131077, 3, -524286, 196613, 0, -458750, 5, 1, -393214, 5, 1, -327678, 5, 1, -262142, 65541, 2, -131070, 65541, 0, -65534, 5, 1, 2, 5, 1, 65538, 5, 1, 131074, 196613, 2, -262141, 131077, 3, -131069, 131077, 3, -262140, 131077, 3, -131068, 131077, 3, -524283, 262144, 6, -458747, 262144, 7, -262139, 131077, 3, -131067, 131077, 3, -524282, 327680, 6, -458746, 327680, 7, -262138, 131077, 3, -131066, 131077, 3, -262137, 196613, 0, -131065, 196613, 2, -196601, 5, 1, -196605, 4, 2, -196603, 65540, 2)

[node name="TileMapTwo" parent="Tiles" instance=ExtResource("3_oujkx")]
layer_1/tile_data = PackedInt32Array(327685, 65537, 0, 393221, 65537, 1, 458757, 65537, 2, 327686, 131073, 0, 393222, 131073, 1, 458758, 131073, 2, 327687, 196609, 0, 393223, 196609, 1, 458759, 196609, 2, 655370, 262144, 6, 720906, 262144, 7, 655371, 327680, 6, 720907, 327680, 7, 1048581, 5, 1, 1114117, 5, 1, 1048583, 65541, 0, 1114119, 5, 1, 1179655, 5, 1, 1048584, 131077, 3, 1048585, 131077, 3, 917512, 131077, 3, 917513, 131077, 3, 851973, 5, 1, 917509, 5, 1, 983045, 5, 1, 786437, 5, 1, 851975, 5, 1, 720903, 5, 1, 1048586, 131077, 3, 917515, 131077, 3, 1048587, 131077, 3, 917516, 196613, 1, 655366, 196612, 1, 655367, 196613, 0, 1179653, 5, 1, 1245189, 5, 1, 1245191, 5, 1, 1310725, 65541, 2, 1310727, 196613, 2, 1310726, 131077, 3, 917511, 65541, 2, 655365, 65541, 0, 720901, 5, 1, 786439, 5, 1, 917514, 131077, 3, 983052, 5, 1, 1048588, 196613, 2, -524283, 262144, 6, -458747, 262144, 7, -524282, 327680, 6, -458746, 327680, 7, -524288, 4, 1, -458752, 4, 2, -393216, 4, 2, -327680, 4, 2, -262144, 4, 2, -196608, 4, 2, -131072, 4, 2, -65536, 4, 2, 0, 4, 2, 65536, 4, 2, 131072, 4, 3, 131073, 65540, 3, 131074, 65540, 3, 2, 4, 2, 65538, 4, 2, -65534, 4, 2, -131070, 4, 1, -131069, 65540, 1, -131068, 65540, 1, -131067, 65540, 1, -131065, 131076, 3, -131066, 65540, 3, -196601, 131076, 2, -262138, 65540, 1, -262139, 65540, 1, -262140, 65540, 1, -262141, 65540, 1, -262142, 4, 3, -327678, 4, 2, -393214, 4, 2, -458750, 4, 2, -524286, 65540, 1, -262137, 131076, 1, -196603, 4, 2)

[node name="TestNode" type="Node2D" parent="."]
position = Vector2(-616, -456)

[connection signal="change_dimension" from="Player" to="Tiles" method="change_dimension"]
[connection signal="change_door_state" from="Key" to="DoorTileMap" method="change_door_state"]
[connection signal="get_key" from="Key" to="Player" method="get_key"]
